--- a/front_end/package.json
+++ b/front_end/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.4",
     "dotenv": "^16.0.0",
+    "ipfs-http-client": "^56.0.2",
     "postcss": "^8.4.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
