--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,2 @@
 APP_ENVIRONMENT=development
+mongoDB_URI=mongodb+srv://shota:TUSee20138@cluster-free.mmct5.mongodb.net/CanCanEducationCenter?retryWrites=true&w=majority
