--- a/front_end/package.json
+++ b/front_end/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.4",
+    "axios": "^1.2.0",
     "dotenv": "^16.0.0",
     "ipfs-http-client": "^56.0.2",
     "postcss": "^8.4.12",
